# chess

./: .gitignore  CMakeLists.txt  main.cpp  setup.nsi
data/: settings.json  settings.jsonc  settings2.json
src/: app.cpp  app.h  asset.cpp  asset.h  computerplayer.cpp  computerplayer.h  evaluator.h  game.cpp  game.h  icon.rc  main.cpp  settings.cpp  settings.h  step.h  stepgenerator.h  stone.h  stonemap.cpp  stonemap.h
tool/: tool.cpp
